[package]
name = "test_tetra_integration"
description = "Test using stabilkon with Tetra"
version = "0.1.0"
edition = "2021"
publish = false

[[test]]
name = "tetra"
path = "gltests/tetra.rs"
harness = false

[dev-dependencies]
rand = "0.8"
stabilkon = { path = "../stabilkon/", features = [ "tetra" ]}
tetra = "^0.6"